[package]
name = "spotify-retro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
log = "0.4.0"
env_logger = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.23"
futures-util = "0.3.23"
clap = { version = "3.2.8", features = ["derive"] }
rspotify-model = "0.11.5"
