[package]
name = "spotify-retro"
version = "0.1.1"
edition = "2021"
description = "Spotify-Retro is a simple CLI tool that will generate a Spotify playlist for you based on the sprint number you provide"
license = "MIT"
repository = "https://github.com/lineville/spotify-retro"


[dependencies]
tokio = { version = "1", features = ["full"] }
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
log = "0.4.0"
env_logger = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.23"
futures-util = "0.3.23"
clap = { version = "3.2.8", features = ["derive"] }
rspotify-model = "0.11.5"
